syntax = "proto3";

package binary;

option go_package = "/pkg-bin/storage";

import "block.proto";
import "directSwap.proto";
import "pairSwap.proto";
import "liquidityEvant.proto";
import "transferEvent.proto";
import "newPair.proto";

message BlockState {
  repeated DirectSwap DirectSwaps = 1;
  repeated PairSwap PairSwaps = 2;
  repeated LiquidityEvent Liquidities =3;
  repeated TransferEvent Transfers = 4;
  repeated NewPair Pairs =5;
  Block Block = 6;
}