syntax = "proto3";

package binary;

option go_package = "/pkg-bin/storage";

import "customEvent.proto";

message DexeEvents{
  bytes Number = 1;
  int64 Timestamp = 2;
  string Network = 3;
  repeated CustomEvent CustomEvents = 4;
}